[metadata]
name = grill
version = 0.17.1
description = Pipeline tools for (but not limited to) audiovisual projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cg cgi audiovisual pipeline tools usd pxr cook pixar 3d animation
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/thegrill/grill
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
install_requires = grill-names>=2.6.0; networkx>=3.4; pydot>=3.0.1; numpy; printree
include_package_data = True
packages = find_namespace:

[options.packages.find]
include = grill.*

[options.extras_require]
# USD build:
# conda create -n py313usd2411build python=3.13
# conda activate py313usd2411build
# conda install -c conda-forge cmake=3.27
# python -m pip install PySide6 PyOpenGL jinja2
# conda install -c rdonnelly vs2019_win-64
# python "A:\write\code\git\OpenUSD\build_scripts\build_usd.py" -v "A:\write\builds\py313usd2411build"
#
# --- dev env ---:
# conda create -n py313usd2411 python=3.13
# conda activate py313usd2411
# runtime dependencies:
# conda install conda-forge::graphviz
# python -m pip install grill-names>=2.6.0 networkx>=3.4 pydot>=3.0.1 numpy printree PyOpenGL pyside6
# docs dependencies:
# python -m pip install sphinx myst-parser sphinx-toggleprompt sphinx-copybutton sphinx-togglebutton sphinx-hoverxref>=1.4.1 sphinx_autodoc_typehints sphinx-inline-tabs shibuya
# For EDGEDB (coming up)
# python -m pip install edgedb
# To install packages in editable mode, cd to desired package repo, then:
# python -m pip install -e .

# USD WASM build
# https://github.com/autodesk-forks/USD/tree/adsk/feature/wasm/build_scripts/pypi/package_files
# https://github.com/autodesk-forks/USD/compare/adsk/feature/wasm...autodesk-forks:USD:adsk/collab/port-python-wasm
# (in wls)
# conda create -n py312usd2405emscripten python=3.12
# conda activate py312usd2405emscripten
# conda install conda-forge::cmake=3.27 conda-forge::gxx
# python -m pip install jinja2
# https://pyodide.org/en/stable/development/building-and-testing-packages.html#building-and-testing-packages-out-of-tree
# python -m pip install pyodide-build
# git clone https://github.com/emscripten-core/emsdk.git
# cd emsdk
# PYODIDE_EMSCRIPTEN_VERSION=$(pyodide config get emscripten_version)
# ./emsdk install ${PYODIDE_EMSCRIPTEN_VERSION}
# ./emsdk activate ${PYODIDE_EMSCRIPTEN_VERSION}
# source emsdk_env.sh

# python build_usd.py --no-materialx --no-imaging --no-usdview --no-tools --no-examples --no-tutorials -v /mnt/a/write/builds/py312usd2311wasmbuild
# PYTHONPATH=$PYTHONPATH:/mnt/a/write/builds/py312usd2311wasmbuild/lib/python PATH=$PATH:/mnt/a/write/builds/py312usd2311wasmbuild/bin python -c "from pxr import Usd, UsdGeom;stage=Usd.Stage.CreateInMemory();UsdGeom.Sphere.Define(stage, '/world/hello');print(stage.ExportToString())"
# python /mnt/a/write/code/git/OpenUSD/build_scripts/pypi/package_files/setup.py bdist_wheel
# python build_usd.py --build-target wasm --no-materialx --no-imaging --no-usdview --no-tools --no-examples --no-tutorials -v /mnt/a/write/builds/py312usd2405wasmbuild

# python /mnt/a/write/code/git/OpenUSD/build_scripts/build_usd.py --no-materialx --no-imaging --no-usdview --no-tools --no-examples --no-tutorials --build-monolithic --emscripten -v /mnt/a/write/builds/py312usd2405emscripten
# has errors like
# In file included from /home/christian/miniconda3/envs/py312usd2405emscripten/include/python3.12/Python.h:38:
# /home/christian/miniconda3/envs/py312usd2405emscripten/include/python3.12/pyport.h:586:2: error: "LONG_BIT definition appears wrong for platform (bad gcc/glibc config?)."
#   586 | #error "LONG_BIT definition appears wrong for platform (bad gcc/glibc config?)."
#       |  ^
# 1 error generated.
#
#     "emcc" -x c++ -fvisibility-inlines-hidden -fexceptions -DBOOST_SP_DISABLE_THREADS=1 -DLONG_BIT=32 -finline-functions -Wno-inline -Wall -fvisibility=hidden -fPIC -fexceptions -DBOOST_SP_DISABLE_THREADS=1 -O3 -Wno-inline -g0 -DBOOST_ALL_NO_LIB=1 -DBOOST_PYTHON_SOURCE -DBOOST_PYTHON_STATIC_LIB -DNDEBUG -I"." -I"/home/christian/miniconda3/envs/py312usd2405emscripten/include/python3.12" -c -o "/mnt/a/write/builds/py312usd2405emscripten/build/boost/bin.v2/libs/python/build/emscripten-3.1.58/release/link-static/python-3.12/visibility-hidden/object/function_doc_signature.bc" "libs/python/src/object/function_doc_signature.cpp"
#
# should not be failing: https://github.com/bfgroup/b2/pull/310
# see also:
# - https://snarky.ca/wasi-support-for-cpython-june-2023/
# - https://github.com/pyodide/pyodide/issues/2588

docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref>=1.4.1; sphinx_autodoc_typehints; sphinx-inline-tabs; shibuya; usd-core
full = PySide6; usd-core; PyOpenGL
